--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -16,9 +16,9 @@
     <properties>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <skip.unit.tests>false</skip.unit.tests>
-        <skip.integration.tests>true</skip.integration.tests>
+        <skip.integration.tests>false</skip.integration.tests>
 <!--        <skipTests>${skip.unit.tests}</skipTests>-->
-        <skipITs>${skip.integration.tests}</skipITs>
+<!--        <skipITs>${skip.integration.tests}</skipITs>-->
     </properties>
 
     <dependencyManagement>
