--- a/reasoner/reasoner-test-data/reasoner-test-data-sample/pom.xml
+++ b/reasoner/reasoner-test-data/reasoner-test-data-sample/pom.xml
@@ -8,9 +8,9 @@
 	<packaging>pom</packaging>
 
 	<parent>
-		<groupId>dev.ikm.komet</groupId>
+		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>reasoner-test-data</artifactId>
-		<version>1.34.0-SNAPSHOT</version>
+		<version>1.35.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
