Feature/ikm 20240222 elk snomed integration migration deploy fix

--- a/reasoner/reasoner-test-data/pom.xml
+++ b/reasoner/reasoner-test-data/pom.xml
@@ -25,6 +25,20 @@
 		<module>reasoner-test-data-solor</module>
 	</modules>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<profiles>
 		<profile>
 			<id>test-data-build</id>
