--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -125,6 +125,15 @@
                             <overWrite>false</overWrite>
                             <outputDirectory>${project.build.directory}/data</outputDirectory>
                         </artifactItem>
+                        <artifactItem>
+                            <groupId>dev.ikm.build</groupId>
+                            <artifactId>tinkar-starter-data-reasoned</artifactId>
+                            <version>${tinkar-starter-data.version}</version>
+                            <classifier>pb</classifier>
+                            <type>zip</type>
+                            <overWrite>false</overWrite>
+                            <outputDirectory>${project.build.directory}/data</outputDirectory>
+                        </artifactItem>
                     </artifactItems>
                     <outputDirectory>${project.build.directory}/data</outputDirectory>
                     <overWriteReleases>false</overWriteReleases>
