--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,9 @@
         <module>language-extensions</module>
         <module>terms</module>
         <module>provider</module>
+        <module>reasoner</module>
         <module>integration</module>
         <module>aggregator</module>
-        <module>reasoner</module>
-
     </modules>
 
     <properties>
@@ -105,6 +104,7 @@
         <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
         <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
         <tinkar-test-dto.version>1.1.0</tinkar-test-dto.version>
+        <tinkar-starter-data.version>0.1</tinkar-starter-data.version>
         <protobuf-java.version>3.22.0-r3</protobuf-java.version>
         <sonar.skip>false</sonar.skip>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
