--- a/provider/search-provider/pom.xml
+++ b/provider/search-provider/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
 
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>coordinate</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>eclipse-collections-api</artifactId>
         </dependency>
