--- a/language-extensions/fhir-extension/pom.xml
+++ b/language-extensions/fhir-extension/pom.xml
@@ -20,15 +20,16 @@
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <commons-text.version>1.12.0</commons-text.version>
         <commons-io.version>2.16.1</commons-io.version>
-        <fhir-base.version>7.0.2-r5</fhir-base.version>
-        <fhir-structures.version>7.0.2-r4</fhir-structures.version>
-        <fhir-hl7-r4.version>6.3.3-r5</fhir-hl7-r4.version>
-        <fhir-hl7-utilities.version>6.3.3-r4</fhir-hl7-utilities.version>
+        <fhir-base.version>7.0.2-r6</fhir-base.version>
+        <fhir-structures.version>7.0.2-r5</fhir-structures.version>
+        <fhir-hl7-r4.version>6.3.3-r6</fhir-hl7-r4.version>
+        <fhir-hl7-utilities.version>6.3.3-r5</fhir-hl7-utilities.version>
         <fasterxml-jackson-core.version>2.17.0</fasterxml-jackson-core.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
@@ -39,6 +40,30 @@
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${commons-text.version}</version>
+            </dependency>
+
+            <!--            <dependency>
+                <groupId>dev.ikm.jpms</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>dev.ikm.jpms</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${commons-text.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>dev.ikm.jpms</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>-->
+
             <dependency>
                 <groupId>org.jsonschema2pojo</groupId>
                 <artifactId>jsonschema2pojo-core</artifactId>
@@ -70,12 +95,6 @@
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>${fasterxml-jackson-core.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-text</artifactId>
-                <version>${commons-text.version}</version>
             </dependency>
 
             <dependency>
@@ -126,6 +145,27 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>org.hl7.fhir.utilities</artifactId>
+        </dependency>
+       <!-- <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>commons-text</artifactId>
+        </dependency>-->
+        <dependency>
             <groupId>dev.ikm.jpms</groupId>
             <artifactId>hapi-fhir-base</artifactId>
         </dependency>
@@ -156,20 +196,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-text</artifactId>
-        </dependency>
-
-
-        <dependency>
             <groupId>dev.ikm.tinkar</groupId>
             <artifactId>entity-provider</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>dev.ikm.jpms</groupId>
-            <artifactId>org.hl7.fhir.utilities</artifactId>
-        </dependency>
 
     </dependencies>
 
