--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -143,6 +143,15 @@
                             <overWrite>false</overWrite>
                             <outputDirectory>${project.build.directory}/data</outputDirectory>
                         </artifactItem>
+                       <!-- todo- need to figure out why the data is not getting pulled from nexus
+                       <artifactItem>
+                            <groupId>dev.ikm.build</groupId>
+                            <artifactId>snomedct</artifactId>
+                            <version>${snomedct-data.version}</version>
+                            <type>zip</type>
+                            <overWrite>false</overWrite>
+                            <outputDirectory>${project.build.directory}/data</outputDirectory>
+                        </artifactItem>-->
                     </artifactItems>
                     <outputDirectory>${project.build.directory}/data</outputDirectory>
                     <overWriteReleases>false</overWriteReleases>
