--- a/language-extensions/fhir-extension/pom.xml
+++ b/language-extensions/fhir-extension/pom.xml
@@ -25,10 +25,16 @@
         <fhir-hl7-r4.version>6.3.3-r6</fhir-hl7-r4.version>
         <fhir-hl7-utilities.version>6.3.3-r5</fhir-hl7-utilities.version>
         <fasterxml-jackson-core.version>2.17.0</fasterxml-jackson-core.version>
+        <guava.version>33.1.0-jre-r1</guava.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>dev.ikm.jpms</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -45,25 +51,6 @@
                 <artifactId>commons-text</artifactId>
                 <version>${commons-text.version}</version>
             </dependency>
-
-            <!--            <dependency>
-                <groupId>dev.ikm.jpms</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>dev.ikm.jpms</groupId>
-                <artifactId>commons-text</artifactId>
-                <version>${commons-text.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>dev.ikm.jpms</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>${commons-io.version}</version>
-            </dependency>-->
-
             <dependency>
                 <groupId>org.jsonschema2pojo</groupId>
                 <artifactId>jsonschema2pojo-core</artifactId>
@@ -132,6 +119,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>dev.ikm.tinkar</groupId>
             <artifactId>common</artifactId>
         </dependency>
@@ -153,18 +145,7 @@
             <groupId>dev.ikm.jpms</groupId>
             <artifactId>org.hl7.fhir.utilities</artifactId>
         </dependency>
-       <!-- <dependency>
-            <groupId>dev.ikm.jpms</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>dev.ikm.jpms</groupId>
-            <artifactId>commons-io</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>dev.ikm.jpms</groupId>
-            <artifactId>commons-text</artifactId>
-        </dependency>-->
+
         <dependency>
             <groupId>dev.ikm.jpms</groupId>
             <artifactId>hapi-fhir-base</artifactId>
