--- a/reasoner/reasoner-test-data/reasoner-test-data-sample/pom.xml
+++ b/reasoner/reasoner-test-data/reasoner-test-data-sample/pom.xml
@@ -15,7 +15,7 @@
 
 	<properties>
 		<data.dir>${user.home}/SolorTest</data.dir>
-<!--		<data>sample-data</data>-->
+		<!--		<data>sample-data</data>-->
 		<data>sample-data-3-sa</data>
 	</properties>
 
@@ -25,6 +25,41 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 			</plugin>
+
+	        <plugin>
+	            <artifactId>maven-jar-plugin</artifactId>
+	            <version>3.1.0</version>
+	            <executions>
+	                <execution>
+	                    <id>default-jar</id>
+	                    <phase>package</phase>
+	                    <goals>
+	                        <goal>jar</goal>
+	                    </goals>
+	                </execution>
+	                <execution>
+	                    <id>javadoc-jar</id>
+	                    <phase>package</phase>
+	                    <goals>
+	                        <goal>jar</goal>
+	                    </goals>
+	                    <configuration>
+	                        <classifier>javadoc</classifier>
+	                    </configuration>
+	                </execution>
+	                <execution>
+	                    <id>sources-jar</id>
+	                    <phase>package</phase>
+	                    <goals>
+	                        <goal>jar</goal>
+	                    </goals>
+	                    <configuration>
+	                        <classifier>sources</classifier>
+	                    </configuration>
+	                </execution>
+	            </executions>
+	        </plugin>
+
 		</plugins>
 	</build>
 
