Remove unnecessary data dependencies

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -102,62 +102,64 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                    </execution>
-
-                    <execution>
-                        <id>unpack</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <artifactItems>
-                        <artifactItem>
-                            <groupId>dev.ikm.build</groupId>
-                            <artifactId>tinkar-test-dto</artifactId>
-                            <version>${tinkar-test-dto.version}</version>
-                            <type>zip</type>
-                            <overWrite>false</overWrite>
+    <profiles>
+        <profile>
+            <id>internal-integration-test-data</id>
+            <activation>
+                <property>
+                    <name>!stageOSSRH</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>dev.ikm.build</groupId>
+                                    <artifactId>tinkar-test-dto</artifactId>
+                                    <version>${tinkar-test-dto.version}</version>
+                                    <type>zip</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/data</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>dev.ikm.build</groupId>
+                                    <artifactId>tinkar-starter-data-reasoned</artifactId>
+                                    <version>${tinkar-starter-data.version}</version>
+                                    <classifier>pb</classifier>
+                                    <type>zip</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/data</outputDirectory>
+                                </artifactItem>
+                                <!-- todo- need to figure out why the data is not getting pulled from nexus
+                                <artifactItem>
+                                     <groupId>dev.ikm.build</groupId>
+                                     <artifactId>snomedct</artifactId>
+                                     <version>${snomedct-data.version}</version>
+                                     <type>zip</type>
+                                     <overWrite>false</overWrite>
+                                     <outputDirectory>${project.build.directory}/data</outputDirectory>
+                                 </artifactItem>-->
+                            </artifactItems>
                             <outputDirectory>${project.build.directory}/data</outputDirectory>
-                        </artifactItem>
-                        <artifactItem>
-                            <groupId>dev.ikm.build</groupId>
-                            <artifactId>tinkar-starter-data-reasoned</artifactId>
-                            <version>${tinkar-starter-data.version}</version>
-                            <classifier>pb</classifier>
-                            <type>zip</type>
-                            <overWrite>false</overWrite>
-                            <outputDirectory>${project.build.directory}/data</outputDirectory>
-                        </artifactItem>
-                       <!-- todo- need to figure out why the data is not getting pulled from nexus
-                       <artifactItem>
-                            <groupId>dev.ikm.build</groupId>
-                            <artifactId>snomedct</artifactId>
-                            <version>${snomedct-data.version}</version>
-                            <type>zip</type>
-                            <overWrite>false</overWrite>
-                            <outputDirectory>${project.build.directory}/data</outputDirectory>
-                        </artifactItem>-->
-                    </artifactItems>
-                    <outputDirectory>${project.build.directory}/data</outputDirectory>
-                    <overWriteReleases>false</overWriteReleases>
-                    <overWriteSnapshots>true</overWriteSnapshots>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
