--- a/reasoner/reasoner-elk-owl/pom.xml
+++ b/reasoner/reasoner-elk-owl/pom.xml
@@ -84,6 +84,9 @@
 	<profiles>
 		<profile>
 			<id>test-data</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
