--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -86,6 +86,9 @@
 	<profiles>
 		<profile>
 			<id>test-data</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
