--- a/reasoner/reasoner-test-data/pom.xml
+++ b/reasoner/reasoner-test-data/pom.xml
@@ -42,6 +42,9 @@
 	<profiles>
 		<profile>
 			<id>test-data-build</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
 			<build>
 				<pluginManagement>
 					<plugins>
