--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -1,80 +1,152 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>reasoner</artifactId>
-    <packaging>pom</packaging>
+	<parent>
+		<groupId>dev.ikm.tinkar</groupId>
+		<artifactId>tinkar-core</artifactId>
+		<version>1.53.0-SNAPSHOT</version>
+	</parent>
 
-    <parent>
-        <groupId>dev.ikm.tinkar</groupId>
-        <artifactId>tinkar-core</artifactId>
-        <version>1.53.0-SNAPSHOT</version>
-    </parent>
+	<artifactId>reasoner</artifactId>
+	<packaging>pom</packaging>
 
-    <name>Reasoners</name>
-    <properties>
-        <ikm-classifier.version>0.19.0</ikm-classifier.version>
-        <owlapi.version>4.5.25-ikm-r3</owlapi.version>
-    </properties>
+	<name>Reasoners</name>
 
-    <modules>
-        <module>reasoner-elk-owl</module>
-        <module>reasoner-elk-snomed</module>
-        <module>reasoner-service</module>
-    </modules>
+	<modules>
+		<module>reasoner-elk-owl</module>
+		<module>reasoner-elk-snomed</module>
+		<module>reasoner-service</module>
+	</modules>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>dev.ikm.elk</groupId>
-                <artifactId>elk-snomed</artifactId>
-                <version>${ikm-classifier.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>dev.ikm.elk</groupId>
-                <artifactId>elk-snomed-owl</artifactId>
-                <version>${ikm-classifier.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>dev.ikm.owlapi</groupId>
-                <artifactId>owlapi-api</artifactId>
-                <version>${owlapi.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>dev.ikm.owlapi</groupId>
-                <artifactId>owlapi-impl</artifactId>
-                <version>${owlapi.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>dev.ikm.owlapi</groupId>
-                <artifactId>owlapi-apibinding</artifactId>
-                <version>${owlapi.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>dev.ikm.owlapi</groupId>
-                <artifactId>owlapi-parsers</artifactId>
-                <version>${owlapi.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>dev.ikm.tinkar</groupId>
-                <artifactId>reasoner-service</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+	<properties>
+		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
+		<ikm-reasoner.version>0.20.0</ikm-reasoner.version>
+		<owlapi.version>4.5.25-ikm-r3</owlapi.version>
+		<skipITs>true</skipITs>
+		<reasoner-test-data.groupid>dev.ikm.reasoner-test-data</reasoner-test-data.groupid>
+		<snomed-test-data.groupid>dev.ikm.snomed</snomed-test-data.groupid>
+		<snomed-test-data.version>0.1.0</snomed-test-data.version>
+	</properties>
 
-    <profiles>
-        <profile>
-            <id>reasoner-test-data</id>
-            <activation>
-                <property>
-                    <name>newVersion</name>
-                </property>
-            </activation>
-            <modules>
-                <module>reasoner-test-data</module>
-            </modules>
-        </profile>
-    </profiles>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>dev.ikm.elk</groupId>
+				<artifactId>elk-snomed</artifactId>
+				<version>${ikm-reasoner.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dev.ikm.elk</groupId>
+				<artifactId>elk-snomed-owl</artifactId>
+				<version>${ikm-reasoner.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dev.ikm.owlapi</groupId>
+				<artifactId>owlapi-api</artifactId>
+				<version>${owlapi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dev.ikm.owlapi</groupId>
+				<artifactId>owlapi-impl</artifactId>
+				<version>${owlapi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dev.ikm.owlapi</groupId>
+				<artifactId>owlapi-apibinding</artifactId>
+				<version>${owlapi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dev.ikm.owlapi</groupId>
+				<artifactId>owlapi-parsers</artifactId>
+				<version>${owlapi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dev.ikm.tinkar</groupId>
+				<artifactId>reasoner-service</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j2-impl</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>${maven-assembly-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>tidy-maven-plugin</artifactId>
+					<version>1.2.0</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tidy-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>validate</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>analyze</id>
+						<goals>
+							<goal>analyze-only</goal>
+						</goals>
+						<configuration>
+							<ignoreUnusedRuntime>true</ignoreUnusedRuntime>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<useModulePath>true</useModulePath>
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<skipITs>${skipITs}</skipITs>
+					<useModulePath>true</useModulePath>
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
