--- a/language-extensions/pom.xml
+++ b/language-extensions/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>owl-extension</module>
         <module>fhir-extension</module>
+        <module>binding-extension</module>
     </modules>
 
 </project>
