Update for ikm-reasoner 0.24.0

--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -64,6 +64,13 @@
 									<version>2024.05.02</version>
 									<type>zip</type>
 								</artifactItem>
+<!--								<artifactItem>-->
+<!--									<groupId>dev.ikm.tinkar.data</groupId>-->
+<!--									<artifactId>tinkar-starter-data</artifactId>-->
+<!--									<version>1.0.0</version>-->
+<!--									<classifier>pb</classifier>-->
+<!--									<type>zip</type>-->
+<!--								</artifactItem>-->
 							</artifactItems>
 							<outputDirectory>
 								${project.build.directory}/db</outputDirectory>
