--- a/language-extensions/fhir-extension/pom.xml
+++ b/language-extensions/fhir-extension/pom.xml
@@ -188,7 +188,7 @@
         <dependency>
             <groupId>dev.ikm.jpms</groupId>
             <artifactId>hapi-fhir-base</artifactId>
-            <version>7.0.2-r4</version>
+            <version>7.0.2-r7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>dev.ikm.tinkar</groupId>
