--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -20,23 +20,7 @@
     </properties>
 
     <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>dev.ikm.tinkar.ext.owl</groupId>
-                <artifactId>owl-extension</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>dev.ikm.tinkar.fhir</groupId>
-                <artifactId>fhir-extension</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>dev.ikm.tinkar.ext.binding</groupId>
-                <artifactId>binding-extension</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-        </dependencies>
+
     </dependencyManagement>
     
     <dependencies>
@@ -94,23 +78,25 @@
             <scope>test</scope>
         </dependency>
 
-        <!--<dependency>
-            <groupId>dev.ikm.tinkar.ext.owl</groupId>
-            <artifactId>owl-extension</artifactId>
-            <scope>test</scope>
-        </dependency>
-
         <dependency>
             <groupId>dev.ikm.tinkar.fhir</groupId>
             <artifactId>fhir-extension</artifactId>
+            <version>1.58.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>dev.ikm.tinkar.ext.owl</groupId>
+            <artifactId>owl-extension</artifactId>
+            <version>1.58.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>dev.ikm.tinkar.ext.binding</groupId>
             <artifactId>binding-extension</artifactId>
+            <version>1.58.0-SNAPSHOT</version>
             <scope>test</scope>
-        </dependency>-->
+        </dependency>
+
     </dependencies>
 
     <profiles>
