--- a/language-extensions/fhir-extension/pom.xml
+++ b/language-extensions/fhir-extension/pom.xml
@@ -20,8 +20,8 @@
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <commons-text.version>1.12.0</commons-text.version>
         <commons-io.version>2.16.1</commons-io.version>
-        <fhir-base.version>7.0.2-r6</fhir-base.version>
-        <fhir-structures.version>7.0.2-r5</fhir-structures.version>
+        <fhir-base.version>7.0.2-r7</fhir-base.version>
+        <fhir-structures.version>7.0.2-r7</fhir-structures.version>
         <fhir-hl7-r4.version>6.3.3-r6</fhir-hl7-r4.version>
         <fhir-hl7-utilities.version>6.3.3-r5</fhir-hl7-utilities.version>
         <fasterxml-jackson-core.version>2.17.0</fasterxml-jackson-core.version>
@@ -185,11 +185,11 @@
             <groupId>dev.ikm.tinkar</groupId>
             <artifactId>entity-provider</artifactId>
         </dependency>
-        <dependency>
-            <groupId>dev.ikm.jpms</groupId>
-            <artifactId>hapi-fhir-base</artifactId>
-            <version>7.0.2-r7-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>dev.ikm.jpms</groupId>-->
+<!--            <artifactId>hapi-fhir-base</artifactId>-->
+<!--            <version>7.0.2-r7-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>dev.ikm.tinkar</groupId>
             <artifactId>composer</artifactId>
