--- a/.github/workflows/build_workflow.yaml
+++ b/.github/workflows/build_workflow.yaml
@@ -13,11 +13,15 @@ env:
 jobs:
   build-job:
     name: Build Job
-    runs-on: self-hosted
+    runs-on: ubuntu-24.04
     if: github.repository_owner == 'ikmdev'
     steps:
-          - name: Build IKMDEV Code
-            uses: ikmdev/maven-clean-install-build-action@main
-            with: 
-              branch_name: ${{env.BRANCH_NAME}}
+      - uses: actions/setup-java@v4
+        with:
+            java-version: '21'
+            distribution: 'adopt'
+      - name: Build IKMDEV Code
+        uses: ikmdev/maven-clean-install-build-action@main
+        with:
+          branch_name: ${{env.BRANCH_NAME}}
         
