--- a/provider/search-provider/pom.xml
+++ b/provider/search-provider/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-suggest</artifactId>
+        </dependency>
 
      </dependencies>
 
